Bug 1962756 - add button to link preview to jump to settings - r=Mardak,firefox-ai-ml-reviewers,fluent-reviewers,bolsson
- update styles with moz-button
- redirect to #general-link-preview
- add dismiss event dispatch

Differential Revision: https://phabricator.services.mozilla.com/D248343

--- a/browser/components/genai/content/link-preview-card.css
+++ b/browser/components/genai/content/link-preview-card.css
@@ -176,3 +176,9 @@
     }
   }
 }
+
+.reading-time-settings-container {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
